# middle-out-compression

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: ai.rs  compression.rs  main.rs  smugness.rs
