[package]
name = "middle-out"
version = "1.0.0"
edition = "2021"
description = "Revolutionary AI-Powered Middle-Out Compression Technology™"
authors = ["MIDDLEOUT™ Research Division"]
license = "MIT"
readme = "README.md"
keywords = ["compression", "ai", "revolutionary", "middle-out", "innovation"]

[[bin]]
name = "middle-out"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rand = ">=0.8.6, <0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
indicatif = "0.17"
